Added two resources to mirror resources in DRL. Did some refactoring for the MessageService class, there was some code duplication and also moved some responsibilities to other/new classes. Updated unit test and added new integration tests for the new resources.
