# src/main/java/se/sundsvall/postportalservice/api/PrecheckResource.java
@@ -12,23 +12,28 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import java.util.List;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.zalando.problem.Problem;
 import se.sundsvall.dept44.common.validators.annotation.ValidMunicipalityId;
+import se.sundsvall.dept44.support.Identifier;
+import se.sundsvall.postportalservice.api.model.KivraEligibilityRequest;
 import se.sundsvall.postportalservice.api.model.PrecheckRequest;
 import se.sundsvall.postportalservice.api.model.PrecheckResponse;
+import se.sundsvall.postportalservice.api.validation.ValidIdentifier;
 import se.sundsvall.postportalservice.service.PrecheckService;
 
 @Validated
 @RestController
 @Tag(name = "Precheck Resources")
-@RequestMapping("/{municipalityId}/{departmentId}/precheck")
+@RequestMapping("/{municipalityId}/precheck")
 @ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {
 	Problem.class, ConstraintViolationProblem.class
 })))
@@ -47,10 +52,22 @@ class PrecheckResource {
 	})
 	@PostMapping(consumes = APPLICATION_JSON_VALUE, produces = APPLICATION_JSON_VALUE)
 	ResponseEntity<PrecheckResponse> precheckRecipients(
+		@RequestHeader(Identifier.HEADER_NAME) @ValidIdentifier final String xSentBy,
 		@Parameter(name = "municipalityId", description = "Municipality ID", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
-		@Parameter(name = "departmentId", description = "Department ID", example = "SKM") @PathVariable final String departmentId,
 		@RequestBody @Valid final PrecheckRequest request) {
-		final var result = precheckService.precheck(municipalityId, departmentId, request.personIds());
+		Identifier.set(Identifier.parse(xSentBy));
+		final var result = precheckService.precheck(municipalityId, request);
+		return ok(result);
+	}
+
+	@Operation(summary = "Check if the given partyIds are eligible for receiving digital registered letters with Kivra", responses = {
+		@ApiResponse(responseCode = "200", description = "Successful operation", useReturnTypeSchema = true)
+	})
+	@PostMapping(value = "/kivra", consumes = APPLICATION_JSON_VALUE, produces = APPLICATION_JSON_VALUE)
+	ResponseEntity<List<String>> checkKivraEligibility(
+		@ValidMunicipalityId @PathVariable final String municipalityId,
+		@RequestBody @Valid final KivraEligibilityRequest request) {
+		final var result = precheckService.precheckKivra(municipalityId, request);
 		return ok(result);
 	}
 }
